tests/examples/good/garbage_collector/good300.lat
int main() {
    int[] arr = new int[10];
    arr[0] = 42;
    printInt(arr[0]);
    arr[0];
    return 0;
}