tests/examples/bad/array_type_void.lat
int main() {
    void[] arr;
    return 1;
}
